<!--
  ~  Copyright 2018 Soojeong Shin
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">PopularMovies</string>

    <!-- The content description of the movie poster image, backdrop image, cast images and play image -->
    <string name="thumbnail_content_description">Movie poster image thumbnail</string>
    <string name="backdrop_content_description">Backdrop image</string>
    <string name="cast_content_description">Cast images</string>
    <string name="play_content_description">Trailer play button</string>
    <string name="trailer_thumbnail_content_description">YouTube video thumbnail</string>
    <string name="star_content_description">Star image</string>
    <string name="person_content_description">Person image</string>

    <!-- Strings related to the network-->
    <string name="no_network_title">No Network Available</string>
    <string name="no_network_message">We cannot detect a network connection on this device. Please check your mobile data or Wi-Fi and try again.</string>
    <string name="check_network">No network available.\nPlease make sure you are connected to the Internet.</string>

    <!-- Dialog button text -->
    <string name="cancel">Cancel</string>
    <string name="go_to_settings">Go to settings</string>

    <!-- String for the movie details -->
    <string name="ten">/10</string>
    <string name="vote_average">Avg rating</string>
    <string name="release_date">Release Date</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="status">Status</string>
    <string name="synopsis">Synopsis</string>
    <string name="details">Details</string>
    <string name="cast_and_crew">Cast &amp; Crew</string>
    <string name="cast">Cast</string>
    <string name="director">Director</string>
    <string name="original_title">Original Title</string>
    <string name="view_all">View All</string>

    <!-- Snack bar message that is displayed when the user performs a swipe to refresh -->
    <string name="snackbar_updated">Updated just now</string>

    <!-- Snack bar message that is displayed when the user favorites or unfavorites a movie-->
    <string name="snackbar_added">Added to your favorites collection</string>
    <string name="snackbar_removed">Removed from your favorites collection</string>
    <string name="snackbar_offline">Please check your mobile data or Wi-Fi and try again</string>

    <!-- Error message -->
    <string name="error_message_api_key">Please make sure enter your API key.</string>
    <string name="error_message_failed">Failed to connect to the TMDB API.</string>

    <!-- A message when there are no reviews available -->
    <string name="message_no_reviews">No reviews found.\n\nSorry, we couldn\'t find any reviews,
        please check back later.</string>
    <string name="message_no_trailers">No trailers found.</string>

    <!-- A message that is displayed when there are no favorite movies in favorite collections -->
    <string name="message_empty_favorites">It\'s a bit quite in here.\n\nYou can tap a heart button to mark it as a Favorite.</string>

    <string name="check_out">Check out\u0020</string>
    <string name="youtube_trailer">YouTube Trailer\u0020</string>

    <!-- The delimiter to separate genres-->
    <string name="delimiter_comma">,\u0020</string>

    <!-- The runtime format -->
    <string name="format_runtime">
        <xliff:g id="hours">%01d</xliff:g>h\u0020
        <xliff:g id="minutes">%01d</xliff:g>m
    </string>
    <string name="format_runtime_hours">
        <xliff:g id="hours">%01d</xliff:g>h
    </string>

    <!-- String for Settings-->
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_delete">Delete</string>

    <!-- Chooser title in share intent -->
    <string name="chooser_title">Share a movie</string>

    <!-- Split string by new line -->
    <string name="new_line">\n</string>

    <string name="vertical_ellipsis">&#8942;</string>

    <!-- - - - - - - - - - - - - - - - - -
      - Used by PopularMoviesPreferences -
      - - - - - - - - - - - - - - - - - - -->

    <!-- Label for the Sort By preference -->
    <string name="pref_sort_by_label">Sort By</string>

    <!-- Key name for storing sort criteria in SharedPreferences -->
    <string name="pref_sort_by_key" translatable="false">sort_by</string>

    <!-- Default sort criteria for sort by preference -->
    <string name="pref_sort_by_default" translatable="false">popular</string>

    <!-- Label for popular option in sort by preference -->
    <string name="pref_sort_by_label_popular">Popular</string>

    <!-- Label for top rated option in sort by preference -->
    <string name="pref_sort_by_label_top_rated">Top Rated</string>

    <!-- Label for now playing option in sort by preference -->
    <string name="pref_sort_by_label_now_playing">Now Playing</string>

    <!-- Label for upcoming option in sort by preference -->
    <string name="pref_sort_by_label_upcoming">Upcoming</string>

    <!-- Label for favorites option in sort by preference -->
    <string name="pref_sort_by_label_favorites">Favorites</string>

    <!-- Value in SharedPreferences for popular option -->
    <string name="pref_sort_by_popular" translatable="false">popular</string>

    <!-- Value in SharedPreferences for top rated option -->
    <string name="pref_sort_by_top_rated" translatable="false">top_rated</string>

    <!-- Value in SharedPreferences for now playing option -->
    <string name="pref_sort_by_now_playing" translatable="false">now_playing</string>

    <!-- Value in SharedPreferences for upcoming option -->
    <string name="pref_sort_by_upcoming" translatable="false">upcoming</string>

    <!-- Value in SharedPreferences for favorites option -->
    <string name="pref_sort_by_favorites" translatable="false">favorites</string>

</resources>
