<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Copyright 2018 Soojeong Shin
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="@string/pref_sort_by_default"
        android:entries="@array/pref_sort_by_options"
        android:entryValues="@array/pref_sort_by_values"
        android:key="@string/pref_sort_by_key"
        android:title="@string/pref_sort_by_label" />

</PreferenceScreen>