<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:nestedScrollingEnabled="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            style="@style/CardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentPadding="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_overview_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:text="@string/synopsis"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="over view" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/CardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentPadding="16dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_vote_average_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp"
                    android:text="@string/vote_average"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@+id/iv_star"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_star"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/star"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tv_vote_average"
                    app:layout_constraintHorizontal_bias="0.25"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_vote_average_label"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/tv_vote_average"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="84dp"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guideline"
                    app:layout_constraintLeft_toRightOf="@+id/iv_star"
                    app:layout_constraintTop_toBottomOf="@+id/tv_vote_average_label"
                    app:layout_constraintVertical_bias="0.518"
                    tools:text="6.8" />


                <TextView
                    android:id="@+id/tv_vote_ten"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    android:text="@string/ten"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_vote_average"
                    app:layout_constraintEnd_toStartOf="@id/tv_vote_count"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="@+id/tv_vote_average"
                    tools:text="/10" />

                <ImageView
                    android:id="@+id/iv_person"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:src="@drawable/person"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tv_vote_count"
                    app:layout_constraintTop_toBottomOf="@+id/tv_vote_average_label" />

                <TextView
                    android:id="@+id/tv_vote_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_person"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/iv_person"
                    app:layout_constraintVertical_bias="0.0"
                    tools:text="9314" />

                <android.support.constraint.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/CardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentPadding="16dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_cast_crew_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cast_and_crew"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_director_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/director"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_cast_crew_label" />

                <TextView
                    android:id="@+id/tv_director"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toEndOf="@+id/tv_cast_label"
                    app:layout_constraintTop_toBottomOf="@+id/tv_cast_crew_label"
                    tools:text="director name" />

                <TextView
                    android:id="@+id/tv_cast_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/cast"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_director" />

                <TextView
                    android:id="@+id/tv_cast"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginStart="40dp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/tv_cast_label"
                    app:layout_constraintTop_toTopOf="@+id/tv_cast_label"
                    tools:text="Craig T. Nelson, Holly Hunter, Sara Vowell" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/CardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentPadding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:text="@string/details"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_release_date_label"
                    style="@style/DetailTextLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/release_date" />

                <TextView
                    android:id="@+id/tv_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="2018-06-18" />

                <TextView
                    android:id="@+id/tv_budget_label"
                    style="@style/DetailTextLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/budget" />

                <TextView
                    android:id="@+id/tv_budget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="1223944587" />

                <TextView
                    android:id="@+id/tv_revenue_label"
                    style="@style/DetailTextLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/revenue" />

                <TextView
                    android:id="@+id/tv_revenue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="567892039" />

                <TextView
                    android:id="@+id/tv_status_label"
                    style="@style/DetailTextLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status" />

                <TextView
                    android:id="@+id/tv_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Released" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>